--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Alice/extern/spdlog"]
 	path = Alice/extern/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Alice/extern/GLFW"]
+	path = Alice/extern/GLFW
+	url = https://github.com/TeaCoo/glfw.git
