--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Alice/extern/GLFW"]
 	path = Alice/extern/GLFW
 	url = https://github.com/TeaCoo/glfw.git
+[submodule "Alice/extern/imgui"]
+	path = Alice/extern/imgui
+	url = https://github.com/TeaCoo/imgui.git
