--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=621,51
 Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=57,87
+Size=520,600
 Collapsed=0
 
