--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=621,51
-Size=550,680
+Pos=412,30
+Size=581,680
 Collapsed=0
 
 [Window][Example: Console]
-Pos=57,87
+Pos=80,84
 Size=520,600
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=-4,75
+Size=500,440
 Collapsed=0
 
