--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=412,30
-Size=581,680
+Pos=752,48
+Size=561,750
 Collapsed=0
 
 [Window][Example: Console]
-Pos=80,84
+Pos=-25,83
 Size=520,600
 Collapsed=0
 
@@ -17,4 +17,78 @@ Collapsed=0
 Pos=-4,75
 Size=500,440
 Collapsed=0
+
+[Window][Example: Log]
+Pos=213,135
+Size=500,400
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=-9,138
+Size=485,347
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=118,153
+Size=451,81
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=117,248
+Size=247,48
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=93,60
+Size=454,67
+Collapsed=1
+
+[Window][Example: Constrained Resize]
+Pos=81,76
+Size=500,281
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=85,77
+Size=451,114
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=148,19
+Size=596,695
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=353,695
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=541,156
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=339,307
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
