--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -4,19 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=752,48
+ViewportPos=181,214
+ViewportId=0x4647B76E
+Pos=941,38
+Size=339,663
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Example: Console]
+ViewportPos=1102,301
+ViewportId=0x46B5E99C
 Size=561,750
 Collapsed=0
 
-[Window][Example: Console]
-Pos=-25,83
-Size=520,600
-Collapsed=0
-
 [Window][Example: Simple layout]
-Pos=-4,75
-Size=500,440
+ViewportPos=181,214
+ViewportId=0x4647B76E
+Pos=0,38
+Size=268,663
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Example: Log]
 Pos=213,135
@@ -59,9 +66,12 @@ Size=451,114
 Collapsed=0
 
 [Window][Example: Documents]
-Pos=148,19
-Size=596,695
+ViewportPos=181,214
+ViewportId=0x4647B76E
+Pos=270,417
+Size=669,284
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Dear ImGui Style Editor]
 Pos=60,60
@@ -88,7 +98,22 @@ Pos=60,60
 Size=520,600
 Collapsed=0
 
+[Window][DockSpace Demo]
+ViewportPos=181,214
+ViewportId=0x4647B76E
+Size=1280,701
+Collapsed=0
+
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
+
+[Docking][Data]
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=181,252 Size=1280,663 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=939,663 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=268,701 Selected=0x08F8367F
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1010,701 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=669,377 CentralNode=1
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=669,284 Selected=0xAE1DCC2C
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=339,663 Selected=0xE87781F4
 
