--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -4,18 +4,15 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=181,214
-ViewportId=0x4647B76E
-Pos=941,38
-Size=339,663
+Pos=941,19
+Size=339,484
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Example: Console]
-ViewportPos=1102,301
-ViewportId=0x46B5E99C
-Size=561,750
+Pos=0,505
+Size=1280,215
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Example: Simple layout]
 ViewportPos=181,214
@@ -99,9 +96,7 @@ Size=520,600
 Collapsed=0
 
 [Window][DockSpace Demo]
-ViewportPos=181,214
-ViewportId=0x4647B76E
-Size=1280,701
+Size=1280,720
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -109,11 +104,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=181,252 Size=1280,663 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=939,663 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=268,701 Selected=0x08F8367F
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1010,701 Split=Y
+DockSpace       ID=0x3BC79352 Pos=288,288 Size=1280,701 Split=Y
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,484 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=268,701 Selected=0x08F8367F
+    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1010,701 Split=Y
       DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=669,377 CentralNode=1
       DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=669,284 Selected=0xAE1DCC2C
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=339,663 Selected=0xE87781F4
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,215 Selected=0xDE6E0C33
 
