--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -1,11 +1,12 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=284,154
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=941,19
-Size=339,484
+ViewportPos=579,353
+ViewportId=0xE927CF2F
+Size=245,701
 Collapsed=0
 
 [Window][Example: Console]
@@ -33,22 +34,23 @@ Size=430,450
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=-9,138
-Size=485,347
+Pos=288,19
+Size=1291,767
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Same title as another window##2]
-Pos=118,153
-Size=451,81
+Pos=467,325
+Size=459,71
 Collapsed=0
 
 [Window][###AnimatedTitle]
-Pos=117,248
-Size=247,48
+Pos=192,322
+Size=254,54
 Collapsed=0
 
 [Window][Same title as another window##1]
-Pos=93,60
+Pos=-19,-52
 Size=454,67
 Collapsed=1
 
@@ -63,21 +65,19 @@ Size=451,114
 Collapsed=0
 
 [Window][Example: Documents]
-ViewportPos=181,214
-ViewportId=0x4647B76E
-Pos=270,417
-Size=669,284
+Pos=288,788
+Size=1291,269
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Dear ImGui Style Editor]
-Pos=60,60
+Pos=323,20
 Size=353,695
 Collapsed=0
 
 [Window][Dear ImGui Stack Tool]
-Pos=60,60
-Size=354,104
+Pos=453,177
+Size=459,399
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
@@ -91,24 +91,73 @@ Size=339,307
 Collapsed=0
 
 [Window][Example: Long text display]
-Pos=60,60
-Size=520,600
+ViewportPos=438,243
+ViewportId=0x1E2A6821
+Size=286,1038
 Collapsed=0
 
 [Window][DockSpace Demo]
-Size=1280,720
+Pos=0,19
+Size=1280,701
 Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=570,109
+Collapsed=0
+
+[Window][Main DockSpace]
+Pos=0,19
+Size=1280,701
+Collapsed=0
+
+[Window][Hierachy]
+Pos=0,19
+Size=222,701
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Project]
+Pos=224,525
+Size=818,195
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Inspector]
+Pos=1044,19
+Size=236,701
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Scene]
+Pos=224,19
+Size=818,504
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Game]
+Pos=296,96
+Size=818,504
+Collapsed=0
+DockId=0x0000000B,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=288,288 Size=1280,701 Split=Y
+DockSpace       ID=0x3BC79352 Pos=190,251 Size=1280,682 Split=Y
   DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,484 Split=X
     DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=268,701 Selected=0x08F8367F
     DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1010,701 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=669,377 CentralNode=1
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=669,284 Selected=0xAE1DCC2C
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=651,767 CentralNode=1 Selected=0xE1FDE0B9
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=651,269 Selected=0xAE1DCC2C
   DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,215 Selected=0xDE6E0C33
+DockSpace       ID=0x9C14F892 Window=0x70D0451F Pos=242,284 Size=1280,701 Split=X
+  DockNode      ID=0x00000009 Parent=0x9C14F892 SizeRef=1042,701 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=222,701 Selected=0x9140AA2B
+    DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=818,701 Split=Y
+      DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=788,504 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x0000000C Parent=0x00000002 SizeRef=788,195 Selected=0xD04A4B96
+  DockNode      ID=0x0000000A Parent=0x9C14F892 SizeRef=236,701 Selected=0xE7039252
 
