--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -1,30 +1,29 @@
 [Window][Debug##Default]
-Pos=284,154
+Pos=472,46
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=579,353
+ViewportPos=1157,223
 ViewportId=0xE927CF2F
-Size=245,701
+Size=438,701
 Collapsed=0
 
 [Window][Example: Console]
-Pos=0,505
-Size=1280,215
+Pos=0,19
+Size=344,701
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,1
 
 [Window][Example: Simple layout]
-ViewportPos=181,214
-ViewportId=0x4647B76E
-Pos=0,38
-Size=268,663
+Pos=0,19
+Size=344,701
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Example: Log]
-Pos=213,135
+ViewportPos=859,295
+ViewportId=0xBF126D42
 Size=500,400
 Collapsed=0
 
@@ -34,10 +33,10 @@ Size=430,450
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=288,19
-Size=1291,767
+ViewportPos=453,219
+ViewportId=0x3AC84485
+Size=606,767
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Same title as another window##2]
 Pos=467,325
@@ -91,14 +90,12 @@ Size=339,307
 Collapsed=0
 
 [Window][Example: Long text display]
-ViewportPos=438,243
-ViewportId=0x1E2A6821
-Size=286,1038
+Pos=299,203
+Size=819,365
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,19
-Size=1280,701
+Size=1280,720
 Collapsed=0
 
 [Window][About Dear ImGui]
@@ -113,15 +110,15 @@ Collapsed=0
 
 [Window][Hierachy]
 Pos=0,19
-Size=222,701
+Size=220,701
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Project]
-Pos=224,525
-Size=818,195
+ViewportPos=867,920
+ViewportId=0xE00EE972
+Size=820,233
 Collapsed=0
-DockId=0x0000000C,0
 
 [Window][Inspector]
 Pos=1044,19
@@ -130,34 +127,36 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene]
+Pos=223,19
+Size=819,470
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Game]
+Pos=223,19
+Size=819,470
+Collapsed=0
+DockId=0x00000002,1
+
+[Window][MainRenderDockingWindow]
 Pos=224,19
 Size=818,504
 Collapsed=0
-DockId=0x0000000B,0
-
-[Window][Game]
-Pos=296,96
-Size=818,504
-Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000002,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=190,251 Size=1280,682 Split=Y
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1280,484 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=268,701 Selected=0x08F8367F
-    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1010,701 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=651,767 CentralNode=1 Selected=0xE1FDE0B9
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=651,269 Selected=0xAE1DCC2C
-  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=1280,215 Selected=0xDE6E0C33
-DockSpace       ID=0x9C14F892 Window=0x70D0451F Pos=242,284 Size=1280,701 Split=X
-  DockNode      ID=0x00000009 Parent=0x9C14F892 SizeRef=1042,701 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=222,701 Selected=0x9140AA2B
-    DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=818,701 Split=Y
-      DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=788,504 CentralNode=1 Selected=0xE192E354
-      DockNode  ID=0x0000000C Parent=0x00000002 SizeRef=788,195 Selected=0xD04A4B96
-  DockNode      ID=0x0000000A Parent=0x9C14F892 SizeRef=236,701 Selected=0xE7039252
+DockSpace     ID=0x3BC79352 Pos=797,194 Size=1280,701 Split=X
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=344,701 Selected=0xDE6E0C33
+  DockNode    ID=0x00000008 Parent=0x3BC79352 SizeRef=934,701 Split=Y
+    DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=651,767 CentralNode=1 Selected=0xE1FDE0B9
+    DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=651,269 Selected=0xAE1DCC2C
+DockSpace     ID=0x9C14F892 Window=0x70D0451F Pos=242,284 Size=1280,701 Split=X
+  DockNode    ID=0x00000009 Parent=0x9C14F892 SizeRef=1042,701 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=220,701 Selected=0x9140AA2B
+    DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=1058,701 CentralNode=1
+  DockNode    ID=0x0000000A Parent=0x9C14F892 SizeRef=236,701 Selected=0xE7039252
 
