add file reader and mesh

--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -110,15 +110,15 @@ Collapsed=0
 
 [Window][Hierachy]
 Pos=0,19
-Size=220,701
+Size=219,701
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Project]
-ViewportPos=867,920
-ViewportId=0xE00EE972
-Size=820,233
+Pos=221,487
+Size=821,233
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Inspector]
 Pos=1044,19
@@ -127,36 +127,38 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene]
-Pos=223,19
-Size=819,470
+Pos=221,19
+Size=821,466
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Game]
-Pos=223,19
-Size=819,470
+Pos=221,19
+Size=821,466
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000003,1
 
 [Window][MainRenderDockingWindow]
 Pos=224,19
 Size=818,504
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=797,194 Size=1280,701 Split=X
-  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=344,701 Selected=0xDE6E0C33
-  DockNode    ID=0x00000008 Parent=0x3BC79352 SizeRef=934,701 Split=Y
-    DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=651,767 CentralNode=1 Selected=0xE1FDE0B9
-    DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=651,269 Selected=0xAE1DCC2C
-DockSpace     ID=0x9C14F892 Window=0x70D0451F Pos=242,284 Size=1280,701 Split=X
-  DockNode    ID=0x00000009 Parent=0x9C14F892 SizeRef=1042,701 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=220,701 Selected=0x9140AA2B
-    DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=1058,701 CentralNode=1
-  DockNode    ID=0x0000000A Parent=0x9C14F892 SizeRef=236,701 Selected=0xE7039252
+DockSpace       ID=0x3BC79352 Pos=797,194 Size=1280,701 Split=X
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=344,701 Selected=0xDE6E0C33
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=934,701 Split=Y
+    DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=651,767 CentralNode=1 Selected=0xE1FDE0B9
+    DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=651,269 Selected=0xAE1DCC2C
+DockSpace       ID=0x9C14F892 Window=0x70D0451F Pos=112,154 Size=1280,701 Split=X
+  DockNode      ID=0x00000009 Parent=0x9C14F892 SizeRef=1042,701 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=219,701 Selected=0x9140AA2B
+    DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=1059,701 Split=Y
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=820,466 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=820,233 Selected=0xD04A4B96
+  DockNode      ID=0x0000000A Parent=0x9C14F892 SizeRef=236,701 Selected=0xE7039252
 
