--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "Alice/extern/spdlog"]
 	path = Alice/extern/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Alice/extern/glm"]
+	path = Alice/extern/glm
+	url = https://github.com/g-truc/glm.git
