--- a/Client/imgui.ini
+++ b/Client/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=472,46
+Pos=297,26
 Size=400,400
 Collapsed=0
 
@@ -105,36 +105,36 @@ Collapsed=0
 
 [Window][Main DockSpace]
 Pos=0,19
-Size=1280,701
+Size=700,681
 Collapsed=0
 
 [Window][Hierachy]
 Pos=0,19
-Size=219,701
+Size=219,681
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Project]
-Pos=221,487
-Size=821,233
+Pos=221,467
+Size=241,233
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Inspector]
-Pos=1044,19
-Size=236,701
+Pos=464,19
+Size=236,681
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Scene]
 Pos=221,19
-Size=821,466
+Size=241,446
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Game]
 Pos=221,19
-Size=821,466
+Size=241,446
 Collapsed=0
 DockId=0x00000003,1
 
@@ -143,6 +143,12 @@ Pos=224,19
 Size=818,504
 Collapsed=0
 DockId=0x00000003,0
+
+[Window][Mesh Debug]
+ViewportPos=968,398
+ViewportId=0x68562EF4
+Size=415,262
+Collapsed=0
 
 [Table][0xD0F0C6E3,2]
 Column 0  Weight=1.0000
@@ -154,11 +160,11 @@ DockSpace       ID=0x3BC79352 Pos=797,194 Size=1280,701 Split=X
   DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=934,701 Split=Y
     DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=651,767 CentralNode=1 Selected=0xE1FDE0B9
     DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=651,269 Selected=0xAE1DCC2C
-DockSpace       ID=0x9C14F892 Window=0x70D0451F Pos=112,154 Size=1280,701 Split=X
+DockSpace       ID=0x9C14F892 Pos=216,258 Size=700,681 Split=X
   DockNode      ID=0x00000009 Parent=0x9C14F892 SizeRef=1042,701 Split=X
     DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=219,701 Selected=0x9140AA2B
-    DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=1059,701 Split=Y
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=820,466 CentralNode=1 Selected=0x26816F31
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=820,233 Selected=0xD04A4B96
+    DockNode    ID=0x00000002 Parent=0x00000009 SizeRef=1059,701 Split=Y Selected=0x26816F31
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,446 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=241,233 Selected=0xD04A4B96
   DockNode      ID=0x0000000A Parent=0x9C14F892 SizeRef=236,701 Selected=0xE7039252
 
